# GRIN_Detector

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  archive_manifest.json  pyproject.toml  run_registry.json
configs/: benchmark_microlens200_srt.json  benchmark_microlens200_srt_20x.json  benchmark_microlens200_srt_20x_taper.json  benchmark_microlens200_srt_gated_q99.json  benchmark_microlens200_srt_gated_q99_best.json  benchmark_smoke64.json  benchmark_smoke64_fov200.json  benchmark_smoke64_fov200_teacher.json  default.json  ideal_dic_smoke64.json  nonideal_dic_no_raw_smoke64.json  optical_leakage_dic_nominal.json  reflection_microlens520_actual.json  reflection_microlens520_noisy.json  wrap_stress_mixed_v1.json
docs/: GATING.md  NEXT_STEP_PHASE_JUMP_PLAN.md  NEXT_STEP_PHYSICAL_LEAKAGE_PLAN.md  NON_PROJECT_ARCHIVE.md  PROJECT_STATUS_2026-05-22.md  QDIC_MICROLENS_EXPERIMENT_REPORT.md  QDIC_WLI_MICROLENS_ACQUISITION_PLAN.md  REAL_DATA_EXPERIMENT_PLAN.md  REFLECTION_SIMULATION_ADAPTATION.md  RUNS.md  deep-research-report (1).md
external_data/: README.md
run_refs/: README.md  active_ood_suite_taper_v1  active_pre_real_best_v2  active_qc_eval_best  reference_ablation_signless_report  reference_gate_srt_q99  reference_ood_suite_v1  reference_pre_real_best  reference_suite_opt_edge_gated_q99  reference_suite_opt_gate_q99_v1
scripts/: analyze_reflection_common_individual.py  analyze_reflection_edge_arcs.py  build_defense_ppt.py  build_empirical_reflection_differences.py  compare_edge_viz.py  compare_reflection_capture.py  compare_reflection_dark_port.py  gate_report.py  (+27 more)
(+87 files in other folders)
