[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-grin-rebuild"
version = "0.0.0"
description = "Rebuild of the mini_grin research project into a cleaner engineering layout."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "matplotlib",
]

[project.scripts]
mini-grin = "mini_grin_rebuild.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
